tests/checker/fail/literal_dispatch_duplicate.can
Routed = String

String => Routed {
    String -> (
        * "/a" => Routed { "a" }
        * "/a" => Routed { "again" }
        * String => Routed { "other" }
    )
}

Unit => Program {
    "/a" -> Routed -> Print
}
